...
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settingsActivityTextViewBloodInsulinLevelUnits"
        android:textSize="20sp" />
    <RadioGroup
        android:id="@+id/insulinRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/insulinRadio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/settingsActivityTextViewBloodInsulinLevelUnits1st" />

        <RadioButton
            android:id="@+id/insulinRadio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/settingsActivityTextViewBloodInsulinLevelUnits2nd" />
    </RadioGroup>
    <Button
...
